--- a/src/app/views/admin/services/subscriptions/index/indexSubscription.component.html
+++ b/src/app/views/admin/services/subscriptions/index/indexSubscription.component.html
@@ -2,6 +2,7 @@
 	<div class="card-header">
 		<div class="d-flex justify-content-between align-items-center">
 			<h4 class="card-title">{{'subscriptions' | translate}}</h4>
+			<a class="btn btn-primary" routerLink="/services/subscriptions/create">{{ 'create' | translate }} <i class="ms-2 bi bi-plus"></i></a>
 		</div>
 	</div>
 	<div class="card-body">
