feat: Update createSubscription.component.html to display quantity and unit price

--- a/src/app/views/admin/services/subscriptions/create/createSubscription.component.html
+++ b/src/app/views/admin/services/subscriptions/create/createSubscription.component.html
@@ -104,8 +104,8 @@
 							</td>
 							<td>{{ item?.interval | translate }}</td>
 							<td>{{ item?.description }}</td>
-							<td>{{ item?.interval_count }}</td>
-							<td>{{ item?.price }}</td>
+							<td>{{ item?.quantity }}</td>
+							<td>{{ item?.unit_price }}</td>
 							<td>
 								<div class="d-flex flex-row">
 									<button class="btn btn-sm btn-danger me-2" (click)="removeItem(i)">{{'delete' | translate}}</button>
