--- a/src/app/views/admin/services/invoices/index/indexInvoice.component.html
+++ b/src/app/views/admin/services/invoices/index/indexInvoice.component.html
@@ -9,10 +9,10 @@
 			<table class="table table-hover">
 				<thead>
 					<tr>
-						<th>{{'invoice_number' | translate}}</th>
-						<th>{{'invoice_date' | translate}}</th>
-						<th>{{'due_date' | translate}}</th>
-						<th>{{'total_amount' | translate}}</th>
+						<th>{{'invoiceNumber' | translate}}</th>
+						<th>{{'invoiceDate' | translate}}</th>
+						<th>{{'invoiceDueDate' | translate}}</th>
+						<th>{{'totalAmount' | translate}}</th>
 						<th>{{'status' | translate}}</th>
 						<th></th>
 					</tr>
@@ -26,7 +26,7 @@
 						<td>{{ invoice.attributes.status | translate}}</td>
 						<td>
 							<div class="d-flex flex-row">
-								<a class="btn btn-sm btn-primary me-2">{{ 'edit' | translate }} <i class="ms-2 bi bi-pencil-square"></i></a>
+								<a class="btn btn-sm btn-primary me-2" routerLink="/services/invoices/show/{{invoice.id}}">{{ 'show' | translate }} <i class="ms-2 bi bi-eye-fill"></i></a>
 								<button class="btn btn-sm btn-danger" (click)="deleteInvoice(invoice.id)">{{ 'delete' | translate }}<i class="ms-2 bi bi-trash"></i></button>
 							</div>
 						</td>
