feat: Agregar propiedad de nombre a los elementos de paquete en CreateSubscriptionComponent

--- a/src/app/views/admin/services/subscriptions/create/createSubscription.component.html
+++ b/src/app/views/admin/services/subscriptions/create/createSubscription.component.html
@@ -42,12 +42,14 @@
 					</div>
 				</div>
 
+				<!--
 				<div class="col-md-2">
 					<div class="form-group mb-3">
 						<label for="invoice_date" class="form-label">{{'invoiceDate' | translate}}</label>
 						<input type="date" class="form-control" id="invoice_date" name="invoiceDate" formControlName="invoice_date" required>
 					</div>
 				</div>
+				-->
 				<div class="col-md-2">
 					<div class="form-group mb-3">
 						<label for="due_date" class="form-label">{{'invoiceDueDate' | translate}}</label>
@@ -61,11 +63,11 @@
 
 			<div class="row">
 				<div class="col-md-5">
-					<input type="checkbox" class="btn-check" id="btn-check" formControlName="order_confirmation">
+					<!--<input type="checkbox" class="btn-check" id="btn-check" formControlName="order_confirmation">
 					<label class="btn btn-primary me-2 mb-3" for="btn-check">{{'orderConfirmation' | translate}}</label>
 
 					<input type="checkbox" class="btn-check" id="btn-check-2" formControlName="generate_invoice">
-					<label class="btn btn-primary me-2 mb-3" for="btn-check-2">{{'generateInvoice' | translate}}</label>
+					<label class="btn btn-primary me-2 mb-3" for="btn-check-2">{{'generateInvoice' | translate}}</label>-->
 
 					<input type="checkbox" class="btn-check" id="btn-check-3" formControlName="send_email">
 					<label class="btn btn-primary me-2 mb-3" for="btn-check-3">{{'sendEmail' | translate}}</label>
