--- a/src/app/views/layout/sidebar/sidebar.component.html
+++ b/src/app/views/layout/sidebar/sidebar.component.html
@@ -13,25 +13,27 @@
                 <i class="app-menu__icon bi bi-speedometer"></i><span class="app-menu__label">{{'home' | translate }}</span>
             </a>
         </li>
-		<li>
+		<li *ngIf="permissionService.hasPermission('invoices:index')">
 			<a class="app-menu__item" routerLink="/services/invoices" routerLinkActive="active">
 				<i class="app-menu__icon bi bi-receipt"></i><span class="app-menu__label">{{'invoices' | translate }}</span>
 			</a>
 		</li>
 		<li class="treeview" (click)="toggleTreeView($event)">
-			<a class="app-menu__item" href="#" data-toggle="treeview">
+			@if (permissionService.hasPermission('packages:index') || permissionService.hasPermission('roles:subscriptions')){
+				<a class="app-menu__item" href="#" data-toggle="treeview">
 				<i class="app-menu__icon bi bi-calendar-event"></i>
 				<span class="app-menu__label">{{'services' | translate}}</span>
 				<i class="treeview-indicator bi bi-chevron-right"></i>
 			</a>
+			}
 			<ul class="treeview-menu">
-				<li>
+				<li *ngIf="permissionService.hasPermission('packages:index')">
 					<a class="treeview-item" routerLink="/services/packages" routerLinkActive="active">
 						<i class="icon bi bi-box"></i> {{'packages' | translate}}
 					</a>
 				</li>
 
-				<li>
+				<li *ngIf="permissionService.hasPermission('subscriptions:index')">
 					<a class="treeview-item" routerLink="/services/subscriptions" routerLinkActive="active">
 						<i class="icon bi bi-calendar-range-fill"></i> {{'subscriptions' | translate}}
 					</a>
@@ -60,7 +62,7 @@
 			</ul>
 		</li>
 		<li class="treeview" (click)="toggleTreeView($event)">
-			@if (permissionService.hasPermission('settings:index')){
+			@if (permissionService.hasPermission('settings:app')){
 				<a class="app-menu__item" href="#" data-toggle="treeview">
 					<i class="app-menu__icon bi bi-sliders2"></i>
 					<span class="app-menu__label">{{'settings' | translate}}</span>
@@ -68,7 +70,7 @@
 				</a>
 			}
 			<ul class="treeview-menu">
-				<li *ngIf="permissionService.hasPermission('settings:update')">
+				<li *ngIf="permissionService.hasPermission('settings:app')">
 					<a class="treeview-item" routerLink="/settings/app" routerLinkActive="active">
 						<i class="icon bi bi-gear-fill"></i> {{'general' | translate }}
 					</a>
