--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,9 @@
 	}
 
 	<div [ngClass]="{'app-content': loggedIn && !exceptionRoute(), 'container mt-4': exceptionRoute() || !loggedIn}">
-		<router-outlet></router-outlet>
+		<div class="container">
+			<router-outlet></router-outlet>
+		</div>
 	</div>
 
 	<app-toast></app-toast>
