refactor: Agregar enlace a la configuración de pasarela de pago en la barra lateral

--- a/src/app/views/layout/sidebar/sidebar.component.html
+++ b/src/app/views/layout/sidebar/sidebar.component.html
@@ -80,6 +80,11 @@
 						<i class="icon bi bi-envelope-at"></i> {{'mail' | translate }}
 					</a>
 				</li>
+				<li *ngIf="permissionService.hasPermission('settings:payment_gateway')">
+					<a class="treeview-item" routerLink="/settings/payment_gateway" routerLinkActive="active">
+						<i class="icon bi bi-credit-card"></i> {{'paymentGateway' | translate }}
+					</a>
+				</li>
 			</ul>
 		</li>
 	</ul>
